bug: fixed overlapping of container elements on desktop/large screens :zap:

--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,13 @@ body {
 .container {
 	display: flex;
 	justify-content: space-around;
-	padding: 8rem;
+	padding: 3rem;
 	flex-wrap: wrap;
 }
 
 .container__img {
 	width: 100%;
+	margin-right: 1rem; 
 }
 
 .text-box {
